Drop redundant endpoint
